[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }  
tokio = { version = "1.35.1", features = ["full"] }   
